@@ -1,3 +1,0 @@
-MD5 9b8963ba2147a64bd5f1574b6fd289cb junit3.8.2.zip 461426
-RMD160 c66d64d8aa738460490e62fd332c112076d9b662 junit3.8.2.zip 461426
-SHA256 aae23d20e6f4dc45b4bf0b10fedcbd209c100342a0cafce1aa07d2da6da1f24a junit3.8.2.zip 461426
